# redd-crawler

./: .dockerignore  .env.example  .gitignore  DEPLOY_GUIDE.md  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  schema.sql  schema_v2_ai_analysis.sql  test_extractor_live.py  test_spider_live.py
crawler/: __init__.py  baania_harvester.py  bam_harvester.py  db_writer.py  ddproperty_harvester.py  extractor.py  ghbank_harvester.py  gsb_harvester.py  hipflat_harvester.py  kbank_harvester.py  kkp_harvester.py  krungsri_harvester.py  krungthai_harvester.py  led_harvester.py  led_harvester_v2.py  market_cache.py  orchestrator.py  perplexity_analyzer.py  sam_harvester.py  scb_harvester.py  scbnpa_harvester.py  spider.py
docs/: index.html
migrations/: 004_market_value_before_reno.sql  005_market_patterns.sql  006_rich_analysis_columns.sql  add_dedup_key.sql
scripts/: push_to_github.sh  run_scan.sh
state/: ISSUES.md  PROJECT_STATE.json  TODO.md
tests/: test_extractor.py  test_spider.py
